[tool.poetry]
name = "moehlenhoff-alpha2"
version = "1.3.1"
description = "Python client for the Moehlenhoff Alpha2 underfloor heating system"
authors = ["Jan Schneider <oss@janschneider.net>"]
readme = "README.md"
homepage = "https://github.com/j-a-n/python-moehlenhoff-alpha2"
repository = "https://github.com/j-a-n/python-moehlenhoff-alpha2"
classifiers = [
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
]


[tool.poetry.dependencies]
python = "^3.7"
aiohttp = "*"
xmltodict = "*"

[tool.poetry.dev-dependencies]
pytest = "^7.1"
pytest-asyncio = "^0.18"
pylint = "^2.12"
flake8 = "^4.0"
pytest-coverage = "^0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
