[project]
name = "moehlenhoff-alpha2"
version = "1.3.1"
description = "Python client for the Moehlenhoff Alpha2 underfloor heating system"
readme = "README.md"
classifiers = [
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
]
requires-python = ">=3.8"
dependencies = [
  "aiohttp",
  "xmltodict"
]

[[project.authors]]
name = "Jan Schneider"
email = "oss@janschneider.net"

[project.urls]
Homepage = "https://github.com/j-a-n/python-moehlenhoff-alpha2"
Repository = "https://github.com/j-a-n/python-moehlenhoff-alpha2"

[dependency-groups]
dev = [
  "pytest>=7.1",
  "pytest-asyncio>=0.18",
  "pylint>=2.12",
  "flake8>=4.0",
  "pytest-coverage>=0.0"
]

[tool.uv]
package = true
